MDEV-22501 Various issues when using --innodb-data-file-size-debug=-1

Let us limit the maximum value of the debug parameter
innodb_data_file_size to 256 MiB. It is only being used
in the test innodb.log_data_file_size, and the size
of the system tablespace should never exceed some 70 MiB
in ./mtr. Thus, 256 MiB should be a reasonable limit.

The fact that negative values that are passed to unsigned parameters
wrap around to the maximum value appears to be a regression due to
commit 18ef02b04dfae21148c7397d088c7ffdfcd23c4e
and has been filed as bug MDEV-22219.